--- a/index.html
+++ b/index.html
@@ -1,23 +1,12 @@
+<!-- Write your code below -->
+ <h1>THE GOATED MOVIE LIST</h1>
+ <h2>My top 3 movies of all time</h2>
 
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>DARYL'S PORTFOLIO</title>
-</head>
-
-<body>
-<h1>I am a web developer</h1> 
  <hr/>
-<h2><a href="./public/movie-ranking.html">Movie Ranking Project</a></h2>
-<img src="./assets/images/movie-ranking.png" height="300"/>
-<h2>These are some of my projects</h2>
-<h3><a href="./public/birthday-invite.html">Birthday Invite</a></h3>
-<img src="./assets/images/birthday-invite.png" height="300"/>
-<hr/>
- <a href="./public/about.html">About Me</a>
- <a href="./public/contact.html">Contact</a>
- </body>
- 
- </html>
+
+ <h3>The wolf of wall street</h3>
+ <p>Do i need to say anything.</p>
+ <h3>The Great Gatsby</h3>
+ <P>Amazing story of Romance and Betrayal.</P>
+ <h3>Zoro</h3>
+ <p>Once again a classic.</p>
