--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
-<!-- Write your code below -->
- <h1>THE GOATED MOVIE LIST</h1>
- <h2>My top 3 movies of all time</h2>
-
- <hr/>
-
- <h3>The wolf of wall street</h3>
- <p>Do i need to say anything.</p>
- <h3>The Great Gatsby</h3>
- <P>Amazing story of Romance and Betrayal.</P>
- <h3>Zoro</h3>
- <p>Once again a classic.</p>
+<!DOCTYPE html>
+<html lang="en"></html>
+<head></head>
+<title>Motivation Meme</title>
+<style>
+  body {
+    background-color: black;
+    color: white;
+    font-family: 'Libre Baskerville', serif;
+  }
+  div {
+    width: 50%;
+    margin-left: 25%;
+  }
+  h1 {
+    text-transform: uppercase;
+    text-align: center;
+  }
+  p{
+    text-align: center;
+    text-transform: none;
+  }
+  img {
+    width: 100%;
+    border: 5px solid white;
+  }
+</style>
+</head>
+<body>
+  <div>
+    <img src="/6.4 Motivation Meme Project/assets/1000012714.jpg"/>
+    <h1>The look on your face </h1>
+    <p>After sending a meme to the family groupchat instead of your friend</p> 
+  </div>
+</body>
+</html>
